2004-04-08  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac, src/libmissing/Makefile.am, src/libmissing/getopt.c,
	  src/libmissing/getopt.h, src/libmissing/getopt1.c, src/munge/munge.c,
	  src/munge/unmunge.c, src/munged/conf.c:
	  Added GNU getopt from glibc-2.3.2 to libmissing.

2004-04-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Tweaked in an attempt to make path independent.

2004-04-02  Chris Dunlap  <cdunlap@llnl.gov>

	* : Added official UCRL number.

	* munge.spec, src/etc/munge.init:
	  Changed daemon rpm (re)start behavior at install or upgrade.

2004-03-31  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4, src/munge/unmunge.c, src/munged/dec_v1.c,
	  src/munged/enc_v1.c, src/munged/zip.c:
	  Added -pedantic to --enable-debug CFLAGS.

2004-03-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c(main):
	  Changed logfile priority from LOG_DEBUG to LOG_NOTICE (if NDEBUG).

	* munge.spec, config/Make-rpm.mk:
	  Changed tarball suffix from ".tgz" to ".tar.gz".

2004-03-24  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac, config/x_ac_check_pthreads.m4,
	  config/x_ac_reentrant.m4, src/munged/Makefile.am:
	  Added configure test to determine how to link against pthreads.

	* src/munged/crypto_thread.c, src/munged/crypto_thread.h:
	  Removed ifdef for HAVE_LIBPTHREAD.

2004-03-19  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c, src/munge/unmunge.c, src/munged/conf.c:
	  Minor tweaks for FreeBSD.

2004-03-18  Chris Dunlap  <cdunlap@llnl.gov>

	* bootstrap: Force replacement of existing bootstrap-related files.

	* config/mkinstalldirs: Updated with latest version from automake-1.8.

	* config/compile, config/config.guess, config/config.sub,
	  config/depcomp, config/install-sh, config/ltmain.sh, config/missing:
	  Nuked and updated with latest versions via the bootstrap script.
	  Fixes bug where the ".so" suffix disappeared from shared lib names.

2004-03-17  Chris Dunlap  <cdunlap@llnl.gov>
