@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: configure.ac,v 1.20 2004/04/08 22:09:45 dun Exp $
+## $Id: configure.ac,v 1.21 2004/04/09 01:44:32 dun Exp $
 ##*****************************************************************************
 ## Process this file with autoconf to produce a configure script.
 ##*****************************************************************************
@@ -56,6 +56,8 @@ X_AC_DEBUG
 # Checks for libraries.
 ##
 X_AC_CHECK_PTHREADS
+X_AC_CHECK_COND_LIB(nsl, inet_ntoa)
+X_AC_CHECK_COND_LIB(socket, socket)
 X_AC_CHECK_COND_LIB(bz2, BZ2_bzBuffToBuffCompress)
 X_AC_CHECK_COND_LIB(z, compress)
 
